# Chillback

./: .gitignore  INSTALLATION_INSTRUCTIONS.md  LICENSE  PRIVACY_POLICY.md  README.md  SETTINGS.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle  settings.gradle.kts
.fleet/: receipt.json
.github/: dependabot.yml
.github/workflows/: rust.yml
android-specific/: .gitignore  gradle.properties  settings.gradle.kts
android-specific/.github/: dependabot.yml
android-specific/.github/workflows/: stale.yml
android-specific/android-specific2/Chillback/: build.gradle.kts  settings.gradle.kts
android-specific/android-specific2/Chillback/composeApp/: build.gradle.kts
android-specific/app/schemas/com.deathsdoor.chillback.data.database.ApplicationLocalDatabase/: 7.json
app/: build.gradle  build.gradle.kts
app/schemas/com.deathsdoor.chillback.data.database.ApplicationLocalDatabase/: 4.json  5.json  6.json  8.json  9.json
app/src/main/: AndroidManifest.xml
backend/: Cargo.toml
backend/src/: database.rs  lib.rs  youtube.rs
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
core-database/: build.gradle.kts
core-database/src/androidMain/: AndroidManifest.xml
core-layout/: build.gradle.kts
core-layout/src/androidMain/: AndroidManifest.xml
core-media/: build.gradle.kts
core-preference/: build.gradle.kts
core-preferences/: build.gradle.kts  google-services.json
feature-mediaplayer/: build.gradle.kts
feature-welcome/: build.gradle.kts  translation_cache.bak
features/homepage/HomePage/: build.gradle.kts  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
legal/: COOKIE_POLICY.md  PRIVACY.md  TERM_CONDITION.md
platforms-intergation/Chillback/: build.gradle.kts
platforms-intergation/Chillback/composeApp/: build.gradle.kts
platforms-intergation/Chillback/gradle/: libs.versions.toml
scripts/generate_translations/: generate_translations_for_kotlin_multiplatform_resources.py  generate_translations_for_moko_resources.py  shared_translator.py  utils.py
scripts/generate_translations/deepl/: test.py
scripts/kotlin/: category1.kt  metadata6.kt
scripts/python/: const_renamer_from_value.py  enum_data_to_string_res.py  enum_for_each_map.py  generate_bindings.py  translate_strings.py
scripts/rust/: metadata1.rs  metadata2.rs  metadata3.rs  metadata4.rs  metadata5.rs  metadata7.rs  metadata8.rs
(+533 files in other folders)
