[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib","cdylib"]

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
# For compiling this library , without installing more shit
openssl = { version = "0.10", features = ["vendored"] }

# For youtube
google-youtube3 = " 5.0.4+20240303"
rusty_ytdl = "0.7.1"
serde_json = "1.0.115"
thiserror = "1.0.58"

# For kotlin bindings
uniffi = { version = "0.27.0" , features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.27.0", features = [ "build" ] }

[dev-dependencies]
tokio = "1.37.0"
