[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib","cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
# So that I can test this locally as well
database = []#["r2d2_sqlite","rusqlite","r2d2","once_cell"]

[dependencies]
# For kotlin bindings
uniffi = { version = "0.27.0" , features = ["cli"] }

# For compiling this library , without installing more shit
#openssl = { version = "0.10", features = ["vendored"] }

# For Database Caching
#r2d2_sqlite = { version = "0.24.0", optional = true }
#rusqlite = { version = "0.31.0" , optional = true }
#r2d2 = { version = "0.8.10" , optional = true }
#once_cell = { version = "1.19.0", optional = true }

# Errors 
thiserror = "1.0.58"

# For youtube
google-youtube3 = " 5.0.4+20240303"
rusty_ytdl = "0.7.1"
serde_json = "1.0.115"

[build-dependencies]
uniffi = { version = "0.27.0", features = [ "build" ] }

[dev-dependencies]
tokio = "1.37.0"