[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib","cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
# For kotlin bindings
uniffi = { version = "0.27.0" , features = ["cli"] }

# For compiling this library , without installing more shit
#openssl = { version = "0.10", features = ["vendored"] }

# For Database Caching
r2d2_sqlite = "0.24.0"
rusqlite = "0.31.0"
r2d2 =  "0.8.10" 
once_cell = "1.19.0"

# Errors 
thiserror = "1.0.58"

# For youtube
google-youtube3 = " 5.0.4+20240303"
rusty_ytdl = "0.7.1"
serde_json = "1.0.115"

[build-dependencies]
uniffi = { version = "0.27.0", features = [ "build" ] }

[dev-dependencies]
tokio = "1.37.0"